# Updated-Projects

android-projects/car-dashboard/: AndroidManifest.xml  README.md  settings.gradle.kts  test_project.py
android-projects/todo-app/: AndroidManifest.xml  MainActivity.kt  TodoApp.kt
ascii_art/: ascii_art_generator.py
c-projects/basic-game-engine/: README.md  main.c
c-projects/chatbot-ai/: Makefile  README.md  main.c
c-projects/http-server/: Makefile  README.md  main.c
c-projects/inventory-management-system/: Makefile  README.md  main.c  test_inventory.sh
c-projects/markdown-to-html-converter/: Makefile  README.md  main.c
c-projects/music-player/: Makefile  README.md  main.c
c-projects/personal-finance-tracker/: Makefile  README.md  main.c
c-projects/simple-calendar/: Makefile  README.md  main.c
c-projects/simple-database-management-system/: Makefile  README.md  main.c
c-projects/web-scraper/: Makefile  README.md  main.c  requirements.txt
cpp-projects/2d-game-development/: Makefile  README.md  main.cpp
css_art/: css_art_generator.py  simple_css_art.py  test_generator.py
go-projects/: README.md  SUMMARY.md  test-all-go-projects.sh  test-cli-task-manager.bat
js-projects/: README.md  TODO.md
projects/: README.md
projects/chatbot/: main.py  (+2 more)
pyUnidocs/: Lab7_VMO_Student.docx  lab1.py  lab2.py  lab3.py  lab4.py  lab5_6.py  lab7.py
rust-projects/: test-all-projects.bat  test-all-projects.sh  test-rust-projects.sh
rust-projects/https-server/: Cargo.toml  README.md  generate_certs.bat  generate_certs.sh
rust-projects/https-server/src/: main.rs
(+221 files in other folders)
